2009-02-25  Zan Dobersek  <zandobersek@gmail.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24043
        When faced with URLs with unsupported protocol on Gtk port,
        report the error through an idle function and return true, so
        a proper resource handle is created.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::reportUnknownProtocolError):
        (WebCore::ResourceHandle::start):

Canonical link: https://commits.webkit.org/33301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41226 268f45cc-cd09-0410-ab3c-d52691b4dbfc